# books-fastapi

./: .env  Dockerfile  alembic.ini  auth.py  books.db  database.py  docker-compose.dev.yml  enums.py  error_messages.py  initialization.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2c4d524a4b81_change_role_from_column_to_enum.py  3e236e8c7a64_add_role_to_users.py  6ff93ddcb6e1_add_genre_model_and_relationship_to_book.py
config/: __init__.py  base.py  dev.py  prod.py  test.py
models/: __init__.py  entities.py  models.py  schemas.py
routes/: __init__.py  book_routes.py  genre_routes.py  routes.py  user_routes.py
service/: __init__.py  book_service.py  generic_service.py  genre_service.py  user_service.py
tests/: conftest.py  test_book_service.py
